@@ -30,7 +30,6 @@
 
 #ifndef LOGGER_HPP_INCLUDED__17092010
 #define LOGGER_HPP_INCLUDED__17092010
-#define NDEBUG
 #include <boost/preprocessor/cat.hpp>
 #include <boost/optional.hpp>
 #include <boost/cstdint.hpp>
@@ -168,7 +167,7 @@ public:
 };
 
 // the following will always be realized
-#ifndef NDEBUG
+//#ifndef NDEBUG
 #  define LOG(level,streamout) do { if( Logger::Instance().shallPrint(Logger:: level) ) { \
        Logger::Instance().startline(Logger:: level); \
        Logger::Instance().stream() << streamout << std::endl; \
@@ -177,6 +176,7 @@ public:
 #  define LOG_INDENT(level)              Logger::Closure LOG_CLOSURE_ID (Logger::Instance(), Logger:: level, "  ", false)
 #  define LOG_SCOPE(level,name,msg)      Logger::Closure LOG_CLOSURE_ID (Logger::Instance(), Logger:: level, name, msg)
 #  define LOG_VSCOPE(level,name,val,msg) Logger::Closure LOG_CLOSURE_ID (Logger::Instance(), Logger:: level, name, reinterpret_cast<const void* const>(val), msg)
+/*
 #else
 #  define LOG(level,streamout) 			do { } while(false)
 #  define LOG_CLOSURE_ID BOOST_PP_CAT(log_closure_,__LINE__) do { } while(false)
@@ -184,6 +184,7 @@ public:
 #  define LOG_SCOPE(level,name,msg)      	do { } while(false)
 #  define LOG_VSCOPE(level,name,val,msg) 	do { } while(false)
 #endif
+*/
 
 // the following are debug-flag dependant
 #ifndef NDEBUG
